@@ -11,6 +11,12 @@ FROM gentoo/stage3-amd64-nomultilib:latest
 
 COPY --from=portage /usr/portage /usr/portage
 
+ARG HOST
+ARG PORT
+
+ENV HOST=$HOST
+ENV PORT=$PORT
+
 RUN mkdir /srv
 COPY --from=app /echo/target/release/echo /srv/echo
 WORKDIR /srv
